--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
 <h2 class="govuk-heading-m">{{ data.qs }}  </h2>
-<p>Journey incudes basic auth + dqt lookup</p>
+<p>Journey includes basic auth + dqt lookup</p>
 <p class="govuk-hint">Password for qual service (qs)</p>
 <p><a href="/qualifications/start">Qualifications start page</a> </p>
 <p><a href="/user-research/qual/account">Qualifications account-page</a> </p>
