Updates to fix broken routes journeys

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -15,6 +15,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/related-items";
 @import "patterns/task-list";
 @import "patterns/_panel";
+@import "patterns/_email";
 @import "patterns/button";
 @import "govuk-page-masthead";
 
