--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -1,7 +1,7 @@
 {% extends "layouts/forms-interrupt.html" %}
 {% set hideButton = true %}
-{% set accountPath = '/user-research/qts/create-account' %}
-{% set signIn = '/user-research/qts/sign-in' %}
+{% set accountPath = data['createAccountURL'] or '/user-research/qual/create-account'%}
+{% set signIn = data['signInAccountURL'] or '/user-research/qts/sign-in'%}
 {% set hideBackLink = true %}
 {% set showheader = true %}
 
