--- a/app/views/qualifications/start.html
+++ b/app/views/qualifications/start.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <span class="govuk-caption-l">Guidance</span>
+        <!-- <span class="govuk-caption-l">Guidance</span> -->
         <h1 class="govuk-heading-l govuk-!-margin-bottom-8">{{ serviceName }}</h1>
 
-        <p class="govuk-body-l">Find out how you can access your individual teacher record.</p>
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        <!-- <p class="govuk-body-l">Find out how you can access your individual teacher record.</p>
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
 
     </div>
 
@@ -18,7 +18,7 @@
 
 <div class="govuk-grid-column-two-thirds">
 
-    <ul class="govuk-list govuk-!-font-size-16">
+    <!-- <ul class="govuk-list govuk-!-font-size-16">
         <li>
             From: <a class="govuk-!-font-weight-bold" href="https://www.gov.uk/government/organisations/teaching-regulation-agency">Regulation Agency</a>
         </li>
@@ -26,7 +26,7 @@
             Published 11 September 2022
         </li>
 
-    </ul>
+    </ul> -->
 
 
      <p class="govuk-body">
@@ -37,17 +37,17 @@
             download your teaching certificates
         </li>
         <li>
-            change the name on your teaching certificates
-        </li>
-        <li>
             check your qualification status
         </li>
         <li>
             check your early career teacher induction status
         </li>
+        <li>
+            change the name on your teaching certificates. You'll need a {{ data.tsa }} 
+        </li>
 
     </ul>
-    <section class="gem-c-devolved-nations govuk-!-margin-bottom-8"">
+    <!-- <section class="gem-c-devolved-nations govuk-!-margin-bottom-8"">
         <h2 class="govuk-heading-s govuk-!-margin-bottom-0">
             This service is for qualified teachers in England
         </h2>
@@ -55,19 +55,19 @@
             <li><a class="govuk-link" href="https://www.ewc.wales/site/index.php/en/registration/applying-for-registration.html">Teachers in Wales</a></li>
             <li><a class="govuk-link" href="https://www.gtcs.org.uk/GTCS-login.aspx">Teachers in  Scotland</a></li>
         </ul>
-    </section>
+    </section> -->
     <h1 class="govuk-heading-m">Before you start</h1>
 
-	<p>You’ll need to create a {{ data.tsa }} to access your teaching qualifications. You'll use the account to sign-in to this service and other DfE teaching services.</p>
+	<p>You’ll need to create a <b>{{ data.tsa }}</b> to access your teaching qualifications. You'll use the account to sign-in to this service and other DfE teaching services.</p>
 
     {{ govukButton({
         text: "Start now",
-        href: "ga-account",
+        href: "/auth/ga-account",
         isStartButton: true
     }) }}
   </div>
 
-    <div class="govuk-grid-column-one-third">
+    <!-- <div class="govuk-grid-column-one-third">
         <div class="gem-c-related-navigation govuk-!-margin-bottom-8">
             <br>
             <h2 class="govuk-heading-s ">Related content</h2>
@@ -91,6 +91,6 @@
             </div>
         </div>
 
- </div>
+ </div> -->
 
 {% endblock %}
