--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,7 @@
 
 <h2 class="govuk-heading-m">Basic auth + DQT lookup  </h2>
 <p class="govuk-hint">Password for qual service (qs)</p>
-<p class="govuk-heading-s">Attained QTS email with magic link </p>
+<p class="govuk-heading-s">Recieved QTS email inc magic link </p>
 <p class="govuk-hint">QTS Email + start page + name and date of birth</p>
 <p><a href="/auth/emails/qts-email">Email - access your QTS cert</a> </p>
 
