Final update to flow

--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -28,7 +28,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
     navigation: [
       {
         href: accountLink,
-        text: "Account",
+        text: "DfE Identity Account",
         active: true if account == 'true'
       },      
       {
