Update to intertitial and paths

--- a/app/views/auth/_finish.html
+++ b/app/views/auth/_finish.html
@@ -36,6 +36,8 @@
     {%- endif -%}
 
     <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qs }}</strong>. </p>
+    
+    <input type="hidden" name="account-data" value="{{ data | stringify }}">
 
 
   {%- endif -%}
