--- a/app/views/sign-in/interstitial.html
+++ b/app/views/sign-in/interstitial.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "layouts/forms-interrupt.html" %}
 {% set title %}Sign in using your {{ data.tsa }}{% endset %}
 
 
