--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -5,21 +5,55 @@
 
 {% block content %}
   <p>Dear {{ data.emailName or 'Jane Smith' }},</p>
+  <h1 class="govuk-heading-m">Congratulations on being awarded qualified teacher status (QTS)</h1>
   <p>The Teaching Regulation Agency (TRA) has awarded you qualified teacher status (QTS).</p>
 
 
   <h2 class="govuk-heading-s">Get your QTS certificate</h2>
 
   <p>You can now download your QTS certificate. You’ll need to retain a copy of your certificate to present to employers as evidence of your teaching status.
-  
-  <p>You can download your certificate In the Access your teaching qualifications service:
-  
-  <p> <a href='/user-research/qual/email'>www.access-your-teaching-qualifications.education.gov.uk</a></p>
-  
-  <p>To sign in, you’ll need to create a DfE Identity account - it will only take a few minutes. Once you have an account, you can use it to sign in to different DfE teacher services, for example, Apply for a national professional qualification (NPQ).</p>
-  
-  <p>Employers can contact the TRA independently to verify your teaching status.</p>
-  
 
+  <p>Get your certificate In the Access your teaching qualifications service. You’ll need to create a DfE Identity account to sign in.
+
+
+  <p> <a href='/user-research/qual/email'>www.access-your-teaching-qualifications.education.gov.uk</a></p>
+
+  <h2 class="govuk-heading-s">DfE Identity account</h2>
+
+  <p>To sign in to Access your teaching qualifications, you’ll need to create a DfE Identity account. It only to takes a minute to create an account and once you have one, you can use it to sign in to different DfE teacher services.</p>
+
+  <p>You can also use it to update your details. To create an account to access your teaching qualifications, you’ll need your:</p>
+  <ul class="govuk-list govuk-list--bullet">
+  <li>name</li>
+  <li>mobile phone number</li>
+</ul>
+
+<h2 class="govuk-heading-s">Certificates</h2>
+
+  <p>The certificates are in an Adobe PDF format and are best viewed using up-to-date Adobe reader software. If you’re using a mobile device, you’ll need to get the free app.</p>
+
+  <p> <a href='/www.adobe.com/uk/acrobat/pdf-reader.html'>www.adobe.com/uk/acrobat/pdf-reader.html</a></p>
+
+  <p>Employers can contact the TRA independently to verify your teaching status.</p>
+
+  <h2 class="govuk-heading-s">Search for a job in teaching</h2>
+
+  <p>You can search for a job in teaching by using the government's official Teaching Vacancies website:</p>
+
+  <p> <a href='/www.teaching-vacancies.service.gov.uk'>www.teaching-vacancies.service.gov.uk</a></p>
+
+  <p>It’s used by schools to list their teaching roles and you can sign up for tailored job alerts.</p>
+
+  <p>Kind regards,</p>
+
+  <p>Teaching Regulation Agency</p>
+
+  <p>Follow us on social media:</p>
+
+  <p>Facebook <a href='/www.facebook.com/ecucationgovuk'>www.facebook.com/ecucationgovuk</a></p>
+
+  <p>Twitter <a href='/www.twitter.com/educationgovuk'>www.twitter.com/educationgovuk</a></p>
+
+  <p>Youtube <a href='/www.youtube.com/user/educationgovuk'>www.youtube.com/user/educationgovuk</a></p>
 
 {% endblock %}
