--- a/app/views/qualifications/start.html
+++ b/app/views/qualifications/start.html
@@ -43,7 +43,7 @@
             check your early career teacher induction status
         </li>
         <li>
-            change the name on your teaching certificates. You'll need a {{ data.tsa }} 
+            change the name on your teaching certificates
         </li>
 
     </ul>
