update content on magic link journey

--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -11,9 +11,11 @@
 
   <h2 class="govuk-heading-s">Get your QTS certificate</h2>
 
-  <p>You can now download your QTS certificate. You’ll need to retain a copy of your certificate to present to employers as evidence of your teaching status.
+  <p>You can now download your QTS certificate. You’ll need to retain a copy of your certificate to present to employers as evidence of your teaching status.</p>
 
-  <p>Get your certificate In the Access your teaching qualifications service. You’ll need to create a DfE Identity account to sign in.
+  <p>Employers can contact the TRA independently to verify your teaching status.</p>
+
+  <p>Get your certificate In the Access your teaching qualifications service. You’ll need to create a DfE Identity account to sign in.</p>
 
 
   <p> <a href='/user-research/qual/email'>www.access-your-teaching-qualifications.education.gov.uk</a></p>
@@ -34,7 +36,6 @@
 
   <p> <a href='/www.adobe.com/uk/acrobat/pdf-reader.html'>www.adobe.com/uk/acrobat/pdf-reader.html</a></p>
 
-  <p>Employers can contact the TRA independently to verify your teaching status.</p>
 
   <h2 class="govuk-heading-s">Search for a job in teaching</h2>
 
