--- a/app/views/index.html
+++ b/app/views/index.html
@@ -110,9 +110,9 @@
 <h2 class="govuk-heading-m">Account details - data scenarios </h2>
 <p class="govuk-hint">Users can amend their ID data and where relevant DTQ</p>
 
-<p><a href="/account/account-details?service=qs&showDqtDob=hide&showDqtName=show&showDqtDobAlert=hide&alert=hide">DQT name + ID Name & DOB data</a> </p>
-<p><a href="/account/account-details?service=qs&showDqtDob=show&showDqtName=show&showDqtDobAlert=show&alert=hide">DQT DOB & ID DOB</a> </p>
-<p> <a href="/account/account-details?service=qs&showDqtDob=hide&showDqtName=hide&showDqtDobAlert=hide&alert=hide">No DQT data</a> <br></p>
+<p><a href="/account/account-details?service=qs&showDqtDob=hide&showDqtName=show&showDqtDobAlert=hide&alert=hide&dqtCheck=true">DQT name + ID Name & DOB data</a> <span class="govuk-hint govuk-!-font-size-14">(DOB change link hidden - when DQT + ID match)</span></p>
+<p><a href="/account/account-details?service=qs&showDqtDob=show&showDqtName=show&showDqtDobAlert=show&alert=hidee&dqtCheck=true">DQT DOB & ID DOB</a> <span class="govuk-hint govuk-!-font-size-14">(Change link initially displayed - but hidden on match)</span> </p>
+<p> <a href="/account/account-details?service=qs&showDqtDob=hide&showDqtName=hide&showDqtDobAlert=hide&alert=hidee&dqtCheck=false">No DQT data</a> <span class="govuk-hint govuk-!-font-size-14">(Change link is displayed - even after ammending)</span><br></p>
 
 
 
