--- a/app/views/auth/_account-info.html
+++ b/app/views/auth/_account-info.html
@@ -6,6 +6,9 @@
     your name 
   </li>
   <li>
+    your date of birth 
+  </li>
+  <li>
     a mobile phone number (used for account security)
   </li>
 </ul>
