--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -15,18 +15,19 @@
 
   <p>Employers can contact the TRA independently to verify your teaching status.</p>
 
-  <p>Get your certificate In the Access your teaching qualifications service. You’ll need to create a DfE Identity account to sign in.</p>
+  <p>Get your certificate In the Access your teaching qualifications service. You’ll need to create a  {{ data.tsa }} to sign in.</p>
 
 
   <p> <a href='/user-research/qual/email'>www.access-your-teaching-qualifications.education.gov.uk</a></p>
 
-  <h2 class="govuk-heading-s">DfE Identity account</h2>
+  <h2 class="govuk-heading-s"> {{ data.tsa }}</h2>
 
-  <p>To sign in to Access your teaching qualifications, you’ll need to create a DfE Identity account. It only to takes a minute to create an account and once you have one, you can use it to sign in to different DfE teacher services.</p>
+  <p>To sign in to Access your teaching qualifications, you’ll need to create a {{ data.tsa }}. It only to takes a minute to create an account and once you have one, you can use it to sign in to different DfE teacher services.</p>
 
   <p>You can also use it to update your details. To create an account to access your teaching qualifications, you’ll need your:</p>
   <ul class="govuk-list govuk-list--bullet">
   <li>name</li>
+  <li>date of birth</li>
   <li>mobile phone number</li>
 </ul>
 
