--- a/app/views/account/_summary-card.html
+++ b/app/views/account/_summary-card.html
@@ -24,7 +24,7 @@
 
 {% set verifiedDOB %}
 {{ data.dob | isoDateFromDateInput | govukDate if data['dia'] else '1 December 1989' }}
-  {% if data['dqtCheck'] == 'true' %}
+  {% if data['verifiedDob'] == 'true' %}
   <p class="govuk-hint govuk-!-font-size-14">Your verified date of birth.</p>
   {% endif %}
 {% endset %}
@@ -75,7 +75,7 @@
         text: 'Change',
         href: "date-of-birth"
       }]
-    } if data['dqtCheck'] == "false"
+    } if data['verifiedDob'] == "false"
   } if data['showDqtDob'] != "show",
   {
     key: {
