--- a/app/views/auth/_summary-card.html
+++ b/app/views/auth/_summary-card.html
@@ -1,6 +1,6 @@
 
 {%- if data['emailAuth'] == 'true' -%}
-<p>Confirm the details you've entered are correct (your name, date of birth and mobile phone number). Also, check the email address we have for you.</p>
+<p>Confirm the details you've entered are correct. Also, check the email address we have for you.</p>
 {%- endif -%}
 
 {{ govukSummaryList({
