--- a/app/views/auth/_account-info.html
+++ b/app/views/auth/_account-info.html
@@ -1,27 +1,27 @@
-<p>It will only take a few minutes and you’ll need:</p>
+<p>It will only take a few minutes and you’ll need your:</p>
 
 {%- if data['emailAuth'] == 'true' -%}
 <ul class="govuk-list govuk-list--bullet">
   <li>
-    your name 
+    name
   </li>
   <li>
-    your date of birth 
+    date of birth
   </li>
   <li>
-    a mobile phone number (used for account security)
+    mobile phone number (used for account security)
   </li>
 </ul>
 {%- else -%}
 <ul class="govuk-list govuk-list--bullet">
   <li>
-    an email address (used for contact and account security)
+    email address (used for contact and account security)
   </li>
   <li>
-    a mobile phone number (used for account security)
+    mobile phone number (used for account security)
   </li>
   <li>
-    your name and date of birth
+    name and date of birth
   </li>
 </ul>
 <p>We may ask some follow-up questions to see if you're already in our records.</p>
