--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -22,7 +22,7 @@
 
   <h2 class="govuk-heading-s"> {{ data.tsa }}</h2>
 
-  <p>To sign in to Access your teaching qualifications, you’ll need to create a {{ data.tsa }}. It only to takes a minute to create an account and once you have one, you can use it to sign in to different DfE teacher services.</p>
+  <p>To sign in to Access your teaching qualifications, you’ll need to create a {{ data.tsa }}. It only takes a minute to create an account and once you have one, you can use it to sign in to different DfE teacher services.</p>
 
   <p>You can also use it to update your details. To create an account to access your teaching qualifications, you’ll need your:</p>
   <ul class="govuk-list govuk-list--bullet">
