--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,18 +28,27 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
 <h2 class="govuk-heading-m">Basic auth + DQT lookup  </h2>
-<p class="govuk-hint">Password for qual service (qs)</p>
-<p class="govuk-heading-s">Recieved QTS email inc magic link </p>
-<p class="govuk-hint">QTS Email + start page + name and date of birth</p>
+<p class="govuk-heading-s">Recieved QTS email </p>
+<p class="govuk-hint">QTS Email + start page + name and date of birth + quals service</p>
 <p><a href="/auth/emails/qts-email">Email - access your QTS cert</a> </p>
+<p class="govuk-hint">Password for qual service (qs)</p>
 
 
 
-<p class="govuk-heading-s">Replacement journey for TSSP </p>
-<p class="govuk-hint">Gov start page +  full auth  DQT lookup</p>
+<p class="govuk-heading-s">Qualifications service (TSSP Replacement) </p>
+<p class="govuk-hint">Gov start page +  full auth  DQT lookup + quals service</p>
 <p><a href="/user-research/qual/startpage">Qualifications start page</a> </p>
 <p><a href="/user-research/qual/account">Qualifications account-page</a> </p>
 <p><a target="_blank" href="https://lucid.app/lucidspark/b88634d8-2452-4ed6-9c7c-010383770731/edit?view_items=EA-zAgXC1i4K&invitationId=inv_9a36d007-204a-41ed-b8c3-1f49d5e63a05">Lucid ID flow for the qual service</a> </p>
+<p class="govuk-hint">Password for qual service (qs)</p>
+
+<p class="govuk-heading-s">NPQ  </p>
+<p class="govuk-hint">Gov start page +  Auth +  DQT lookup + NPQ service</p>
+
+<p><a href="https://npq-prototype.herokuapp.com/start-id ">Qualifications start page</a> </p>
+<p class="govuk-hint">Password for npq service (npq)</p>
+
+
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 
