--- a/app/views/index.html
+++ b/app/views/index.html
@@ -80,8 +80,12 @@
   <span class="govuk-hint">User is not permitted to continue</span>
 </p>
 <p>
-  <a href="/auth/finish?dqt-check=pending">Dqt record Pending</a> <br>
-  <span class="govuk-hint">User may be on the DQT - ticket raised for manual check - </span>
+  <a href="/auth/finish?dqt-check=pending-qs">Dqt record Pending (Quals version)</a> <br>
+  <span class="govuk-hint">User may be on the DQT - ticket raised for manual check - user NOT permitted to access service</span>
+</p>
+<p>
+  <a href="/auth/finish?dqt-check=pending-npq">Dqt record Pending (NPQ version)</a> <br>
+  <span class="govuk-hint">User may be on the DQT - ticket raised for manual check - user CAN access service</span>
 </p>
 <p>
   <a href="/auth/finish?dqt-check=auth">Basic auth - no DQT</a> <br>
