--- a/app/views/auth/_finish.html
+++ b/app/views/auth/_finish.html
@@ -6,6 +6,12 @@
   <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
   <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qs }}</strong>. </p>
 
+  {%- elseif data['dqt-check'] == 'pending-npq' -%}
+  <!-- A DQT record has been found - user creates account - accesses service -->
+  <p>You can continue anyway and we'll try to find your record. Some may be in touch to ask for more information</p>
+  <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
+  <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qs }}</strong>. </p>
+
   
 
   {%- elseif data['dqt-check'] == 'failed' -%}
@@ -16,7 +22,7 @@
   <p>You've created a {{ serviceName }}. When you're eligible to use this service, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
   {%- endif -%}
 
-  {%- elseif data['dqt-check'] == 'pending' -%}
+  {%- elseif data['dqt-check'] == 'pending-qs' -%}
   <!-- No DQT record found - account has been created - TRA sent ticket to locate user - user can't access service -->
   {%- if 'pending' -%}
   <p>We need to do some more checks to see if your details are in our records.</p>
