--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -20,7 +20,7 @@
 
   <p> <a href='/user-research/qual/email'>www.access-your-teaching-qualifications.education.gov.uk</a></p>
   {{ govukInsetText({
-    text: "To return this service in future use the link above."
+    text: "To return to this service in future use the link above."
   }) }}
   <h2 class="govuk-heading-s"> {{ data.tsa }}</h2>
 
