--- a/app/views/auth/sign-in-interstitial.html
+++ b/app/views/auth/sign-in-interstitial.html
@@ -13,7 +13,7 @@
 
 {% block form %}
 
-    <p>We've found a Teaching services account for {{deviceMatch}}. </p>
+    <p>We've found a {{ data.tsa }} for {{deviceMatch}}. </p>
 
 
 {% endblock %}
